<resources>
    <string name="app_name">Calculator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="ac">AC</string>
    <string name="del">DEL</string>
    <string name="cl">CL</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="division">÷</string>
    <string name="multiplication">*</string>
    <string name="subtraction">-</string>
    <string name="addition">+</string>
    <string name="dec">.</string>
    <string name="equal">=</string>

    <string name="result">result</string>
</resources>